[gd_scene load_steps=8 format=4 uid="uid://b2oxm45stsfj1"]

[ext_resource type="PackedScene" uid="uid://pst3nkwrie11" path="res://scenes/components/tilemaps/tile_map_color_blocks.tscn" id="1_3l77h"]
[ext_resource type="Script" path="res://scripts/rooms/test_rooms/test_room.gd" id="1_yg0m8"]
[ext_resource type="Script" path="res://scripts/components/player_detector.gd" id="4_hn666"]
[ext_resource type="PackedScene" uid="uid://sqs0vyinplgn" path="res://scenes/components/doorways/doorway_detector.tscn" id="5_01och"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4lms"]
size = Vector2(280, 170)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iunk6"]
size = Vector2(18, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5swio"]
size = Vector2(64, 16)

[node name="TestRoom" type="Node2D"]
script = ExtResource("1_yg0m8")
room_size = Vector2(416, 208)
metadata/_edit_vertical_guides_ = [16.0, 337.0]
metadata/_edit_horizontal_guides_ = [208.0]

[node name="TileMapLayer" parent="." instance=ExtResource("1_3l77h")]
tile_map_data = PackedByteArray("AAABAAAAAAADAAAAAAACAAAAAAADAAAAAAADAAAAAAADAAAAAAAEAAAAAAADAAAAAAAFAAAAAAADAAAAAAAGAAAAAAADAAAAAAAHAAAAAAADAAAAAAABAAEAAAADAAAAAAABAAIAAAADAAAAAAABAAMAAAADAAAAAAABAAQAAAADAAAAAAABAAUAAAADAAAAAAABAAYAAAADAAAAAAABAAcAAAADAAAAAAANAAAAAAADAAAAAAAOAAAAAAADAAAAAAAPAAAAAAADAAAAAAAQAAAAAAADAAAAAAARAAAAAAADAAAAAAASAAAAAAADAAAAAAABAAgAAAADAAAAAAABAAkAAAADAAAAAAABAAwAAAADAAAAAAAAAAwAAAADAAAAAAAAAAkAAAADAAAAAAACAAwAAAADAAAAAAADAAwAAAADAAAAAAAEAAwAAAADAAAAAAAFAAwAAAADAAAAAAAGAAwAAAADAAAAAAAHAAwAAAADAAAAAAAIAAwAAAADAAAAAAANAAwAAAADAAAAAAAOAAwAAAADAAAAAAAPAAwAAAADAAAAAAAQAAwAAAADAAAAAAARAAwAAAADAAAAAAASAAwAAAADAAAAAAATAAwAAAADAAAAAAAIAAAAAAADAAAAAAATAAAAAAADAAAAAAAUAAAAAAADAAAAAAAUAAEAAAADAAAAAAAUAAIAAAADAAAAAAAUAAMAAAADAAAAAAAUAAQAAAADAAAAAAAUAAUAAAADAAAAAAAUAAYAAAADAAAAAAAUAAcAAAADAAAAAAAUAAgAAAADAAAAAAAUAAkAAAADAAAAAAAVAAkAAAADAAAAAAAUAAwAAAADAAAAAAAVAAwAAAADAAAAAAAIAP//AAADAAAAAAANAP//AAADAAAAAAAIAA0AAAADAAAAAAANAA0AAAADAAAAAAAJAAgAAAACAAAAAAAKAAgAAAACAAAAAAALAAgAAAACAAAAAAAMAAgAAAACAAAAAAAIAAgAAAACAAAAAAANAAgAAAACAAAAAAAEAAUAAAACAAAAAAAFAAUAAAACAAAAAAAGAAUAAAACAAAAAAAHAAUAAAACAAAAAAAKAAMAAAACAAAAAAALAAMAAAACAAAAAAAOAAUAAAACAAAAAAAPAAUAAAACAAAAAAAQAAUAAAACAAAAAAARAAUAAAACAAAAAAA=")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("4_hn666")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(175.5, 104)
shape = SubResource("RectangleShape2D_h4lms")

[node name="DoorwayDetector" parent="." instance=ExtResource("5_01och")]
position = Vector2(416, 176)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorwayDetector"]
position = Vector2(-80, 0)
shape = SubResource("RectangleShape2D_iunk6")

[node name="DoorwayDetector2" parent="." instance=ExtResource("5_01och")]
position = Vector2(-64, 176)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorwayDetector2"]
position = Vector2(80, 0)
shape = SubResource("RectangleShape2D_iunk6")

[node name="DoorwayDetector3" parent="." instance=ExtResource("5_01och")]
position = Vector2(176, 256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorwayDetector3"]
position = Vector2(0, -48)
shape = SubResource("RectangleShape2D_5swio")

[node name="DoorwayDetector4" parent="." instance=ExtResource("5_01och")]
position = Vector2(176, -48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorwayDetector4"]
position = Vector2(0, 48)
shape = SubResource("RectangleShape2D_5swio")

[node name="TopLeftBorder" type="Marker2D" parent="."]
position = Vector2(24, 8)

[node name="BottomRightBorder" type="Marker2D" parent="."]
position = Vector2(328, 200)

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
